--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@ section {
   flex-direction: column;
   overflow: hidden;
   width: 25%;
-  height: 80%;
+  height: 85%;
   background-color: white;
   align-items: center;
   border-radius: 1rem;
@@ -44,6 +44,7 @@ section {
   flex-direction: column;
   width: 75%;
   align-items: center;
+  padding-bottom: 1.2rem;
 
 }
 
@@ -80,12 +81,14 @@ h3 {
   font-size: 0.9rem;
   font-weight: 900;
   margin-bottom: 0.2rem;
+  color: hsl(223, 47%, 23%);
 }
 
 h1 {
   margin-top: 1.5rem;
   font-weight: 900;
   margin-bottom: 1.3rem;
+  color: hsl(223, 47%, 23%);
 
 }
 
@@ -99,7 +102,7 @@ h1 {
   width: 100%;
   background-color: hsl(245, 75%, 52%);
   font-size: 0.7rem;
-  font-weight: 500;
+  font-weight: 700;
   color: white;
   padding: 0.9rem;
   border-radius: 0.4rem;
@@ -120,7 +123,7 @@ h1 {
   background-color: white;
   font-weight: 900;
   font-size: 0.7rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 a {
@@ -141,9 +144,9 @@ a:hover {
   margin-bottom: 0.2rem;
 }
 
-@media (min-width:750px) and (max-width:1100px) {
+@media (min-width:750px) and (max-width:1250px) {
   .card {
-    width: 40%;
+    width: 35%;
   }
 }
 
